@@ -9,7 +9,7 @@ use Test::Run::Builder;
 
 my $builder = Test::Run::Builder->new(
     module_name         => 'HTML::Latemp::NavLinks::GenHtml',
-    license             => 'bsd',
+    license             => 'mit',
     dist_author         => 'Shlomi Fish <shlomif@iglu.org.il>',
     dist_version_from   => 'lib/HTML/Latemp/NavLinks/GenHtml.pm',
     configure_requires => {
@@ -20,6 +20,8 @@ my $builder = Test::Run::Builder->new(
         'strict' => 0,
         'Template' => 0,
         'warnings' => 0,
+        'parent' => 0,
+        'perl' => '5.008',
     },
     build_requires => {
         'Test::Differences' => 0,
