@@ -2,6 +2,10 @@ Revision history for HTML-Latemp-NavLinks-GenHtml
 
 0.2.2   2014-01-30
     - Add t/cpan-changes.t and t/style-trailing-space.t .
+    - Convert license to 'mit'.
+    - Minimal perl version. (CPANTS Kwalitee).
+    - Convert to "use parent" instead of base.
+    - Add LICENSE file (CPANTS).
 
 0.2.1   2012-12-07
     - Add Test::Differences to the build_requires.
